[ADD] Atualizando repositorio
Signed-off-by: João V. C. Carvalho <joao.vccarvalho@unitau.br>

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Início</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Casal</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Eventos</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Pessoas</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li>
+          <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Pessoas</a></li> -->
+          <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li> -->
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li>
         </ul>
       </div>
@@ -123,7 +123,7 @@
     </div>
   </div>
 </div>
-<div class="ww-section" id="people">
+<!-- <div class="ww-section" id="people">
   <div class="container ww-couple-friends">
     <h2 class="h1 text-center pt-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groomsmen & Bridesmaids</h2>
     <div class="carousel slide" id="ww-carouselIndicator" data-ride="carousel" data-aos="zoom-in-up" data-aos-duration="1000">
@@ -203,8 +203,8 @@
       </div>
     </div>
   </div>
-</div>
-<div class="ww-section bg-light" id="gallery">
+</div> -->
+<!-- <div class="ww-section bg-light" id="gallery">
   <div class="ww-photo-gallery">
     <div class="container">
       <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Photo Gallery</h2>
@@ -223,7 +223,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
   <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
     <div class="col text-center">
