--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </div>
     <div class="row">
       <div class="col text-center">
-        <button class="btn btn-primary btn-submit" type="button" id="enviar"><i class="fab fa-whatsapp"></i> Enviar</button>
+        <button class="btn btn-primary btn-submit btn-disabled" disabled title="Desabilitado temporariamente" type="button" id="enviar"><i class="fab fa-whatsapp"></i> Enviar</button>
       </div>
     </div>
   </div>
