--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Início</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Casal</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#pedido">O Pedido de Casamento</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Eventos</a></li>
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Pessoas</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#pedido">O Pedido de Casamento</a></li>
               </ul>
             </div>
           </div>
@@ -108,11 +108,6 @@
           </div>
         </div>
       </div>
-      <div class="ww-section text-white" id="pedido">
-        <iframe src="https://www.youtube.com/embed/MLWAmZSACxc" class="pedido-full" title="YouTube video player"
-          frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
       <div class="ww-section bg-light" id="events">
         <div class="container ww-wedding-event">
           <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Eventos</h2>
@@ -121,11 +116,11 @@
               <div class="my-3">
                 <div class="h4">Cerimônia</div>
                 <ul>
-                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps"
+                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class="underline"
                       href="https://www.google.com/maps/place/Santu%C3%A1rio+Bas%C3%ADlica+Senhor+Bom+Jesus+de+Trememb%C3%A9/@-22.959391,-45.552218,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf71347bee355:0x34f557130f1d5a24!8m2!3d-22.959396!4d-45.550024"><i
                         class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Igreja Bom Jesus,
                         Praça Padre Luiz Balmes, Centro, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics"><i
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"><i
                         class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
                         19:00</span></a></li>
                 </ul>
@@ -137,7 +132,7 @@
               </div>
             </div>
             <div class="col-md-5 col-sm-12">
-              <div class="my-3"><img class="img-fluid" src="images/wedding-party.jpg" alt="Wedding Party"
+              <div class="my-3"><img class="img-fluid image-evento" src="images/wedding-party.jpg" alt="Wedding Party"
                   data-aos="fade-down-right" data-aos-duration="1000" /></div>
             </div>
           </div>
@@ -146,12 +141,12 @@
               <div class="my-3">
                 <div class="h4">Recepção</div>
                 <ul>
-                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps"
+                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class="underline"
                       href="https://www.google.com/maps/place/Espa%C3%A7o+Crozariol+Buffet+e+eventos/@-22.9432242,-45.5824071,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf64dd3c89af9:0x6c8284abecc1c8a8!8m2!3d-22.9432292!4d-45.5802131"><i
                         class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Crozariol, Rod.
                         Pedro Celete, 3221, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics"><i
-                        class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">22 Out 2022,
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"><i
+                        class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
                         20:30</span></a></li>
                 </ul>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue
@@ -162,7 +157,7 @@
               </div>
             </div>
             <div class="col-md-5 col-sm-12">
-              <div class="my-3"><img class="img-fluid" src="images/reception.jpg" alt="Reception"
+              <div class="my-3"><img class="img-fluid image-evento" src="images/reception.jpg" alt="Reception"
                   data-aos="fade-up-right" data-aos-duration="1000" /></div>
             </div>
           </div>
@@ -292,6 +287,28 @@
             <div class="col text-center">
               <button class="btn btn-primary btn-submit btn-disabled" disabled title="Desabilitado temporariamente"
                 type="button" id="enviar"><i class="fab fa-whatsapp"></i> Enviar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ww-section" id="pedido">
+        <div class="container">
+          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">O Pedido de Casamento</h2>
+          <div class="row text-center">
+            <div class="col-md-12">
+                <p class="pt-3 text-left text-muted">Hi I am Julia,Lorem ipsum dolor sit amet consectetur adipiscing,
+                  elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
+                  mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
+                  commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
+                  dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
+                <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
+              </div>
+            </div>
+            
+            <div class="col-md-12 vh75">
+              <iframe src="https://www.youtube.com/embed/MLWAmZSACxc" class="pedido-full" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             </div>
           </div>
         </div>
