--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
       </div>
       <div class="ww-section" id="pedido">
         <div class="container">
-          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">O Pedido de Casamento</h2>
+          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">O Pedido de
+            Casamento</h2>
           <div class="row text-center">
             <div class="col-md-12">
-                <p class="pt-3 text-left text-muted">Hi I am Julia,Lorem ipsum dolor sit amet consectetur adipiscing,
-                  elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
-                  mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
-                  commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                  dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
-                <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
-              </div>
+              <p class="pt-3 text-left text-muted">Hi I am Julia,Lorem ipsum dolor sit amet consectetur adipiscing,
+                elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
+                mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
+                commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
+                dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
+              <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
             </div>
-            
+
             <div class="col-md-12 vh75">
               <iframe src="https://www.youtube.com/embed/MLWAmZSACxc" class="pedido-full" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
