[ADD] Inclusão das descrições dos eventos [MOD] Alterando a tela de noivos para casal e foto casal-20 editada.
Signed-off-by: João Carvalho <joao.carvalho@tmh.com.br>

--- a/index.html
+++ b/index.html
@@ -79,31 +79,21 @@
       </div>
       <div class="ww-section" id="couple">
         <div class="container">
-          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Noiva & Noivo</h2>
+          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Casal</h2>
           <div class="row text-center">
             <div class="col-md-6">
-              <div class="mt-3"><img class="img-fluid" src="images/julia.jpeg" alt="Bride" data-aos="flip-right"
+              <div class="mt-3"><img class="img-fluid" src="images/casal-20.jpeg" alt="Bride" data-aos="flip-right"
                   data-aos-duration="1000" style="width:435px" />
-                <p class="pt-3 text-left text-muted">Hi I am Julia,Lorem ipsum dolor sit amet consectetur adipiscing,
-                  elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
-                  mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
-                  commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                  dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
-                <h3 class="h2 ww-title">Julia</h3>
-                <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
+
               </div>
             </div>
             <div class="col-md-6">
-              <div class="mt-3"><img class="img-fluid" src="images/joao.jpeg" alt="Groom" data-aos="flip-left"
-                  data-aos-duration="1000" />
-                <p class="pt-3 text-left text-muted">Hi I am João,Lorem ipsum dolor sit amet consectetur adipiscing,
-                  elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
-                  mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
-                  commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                  dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
-                <h3 class="h2 ww-title">João Carvalho</h3>
-                <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
-              </div>
+              <p class="pt-3 text-left text-muted">Hi I am João,Lorem ipsum dolor sit amet consectetur adipiscing,
+                elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
+                mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
+                commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
+                dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
+              <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
             </div>
           </div>
         </div>
@@ -120,15 +110,17 @@
                       href="https://www.google.com/maps/place/Santu%C3%A1rio+Bas%C3%ADlica+Senhor+Bom+Jesus+de+Trememb%C3%A9/@-22.959391,-45.552218,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf71347bee355:0x34f557130f1d5a24!8m2!3d-22.959396!4d-45.550024"><i
                         class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Igreja Bom Jesus,
                         Praça Padre Luiz Balmes, Centro, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"><i
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"
+                      title="Clique aqui para adiconar a data ao seu calendário"><i
                         class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
                         19:00</span></a></li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue
-                  non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget
-                  hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit
-                  leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent
-                  facilisis eu est.</p>
+                <p>Aqui será o local onde oficializaremos nosso matrimônio em Cristo e onde falaramos o Sim um para o
+                  outro. A igreja do Bom Jesus de Tremembé foi construída pelo fundador da cidade, capitão-mor Manoel da
+                  Costa Cabral, em 1672, após concessão de licença para construção da igreja pela Câmara Eclesiástica do
+                  Rio de Janeiro em terras de sua fazenda, chamada Tremembé. A igreja, que à época era uma capela,
+                  passou por ampliações em 1795. Desde sua inauguração, a igreja abriga uma imagem do Senhor Bom Jesus.
+                </p>
               </div>
             </div>
             <div class="col-md-5 col-sm-12">
@@ -145,15 +137,17 @@
                       href="https://www.google.com/maps/place/Espa%C3%A7o+Crozariol+Buffet+e+eventos/@-22.9432242,-45.5824071,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf64dd3c89af9:0x6c8284abecc1c8a8!8m2!3d-22.9432292!4d-45.5802131"><i
                         class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Crozariol, Rod.
                         Pedro Celete, 3221, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"><i
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"
+                      title="Clique aqui para adiconar a data ao seu calendário"><i
                         class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
                         20:30</span></a></li>
                 </ul>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue
-                  non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget
-                  hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit
-                  leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent
-                  facilisis eu est.</p>
+                <p>Uma empresa familiar séria e íntegra que desde 1999 vêm realizando eventos & sonhos. Oferecendo toda
+                  infraestrutura necessária para que nossa festa aconteça de forma tranquila e segura. Com uma
+                  arquitetura em estilo Europeu rústico encantando a todos vocês, destaque para a Natureza exuberante e
+                  um Espaço que contará com DJ, pista de dança, ilhas gastronômicas (canapé, salgados, buteco e massas),
+                  espaço kids com monitora, open bar com drinks e cervejas e diversas outras comilanças e atrativos
+                  disponiveis para vocês comemorarem com a gente.</p>
               </div>
             </div>
             <div class="col-md-5 col-sm-12">
