--- a/index.html
+++ b/index.html
@@ -84,16 +84,14 @@
             <div class="col-md-6">
               <div class="mt-3"><img class="img-fluid" src="images/casal-20.jpeg" alt="Bride" data-aos="flip-right"
                   data-aos-duration="1000" style="width:435px" />
-
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 align-middle my-auto">
               <p class="pt-3 text-left text-muted">Hi I am João,Lorem ipsum dolor sit amet consectetur adipiscing,
                 elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
                 mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
                 commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
-              <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
+                dictum posuere, tincidunt aenean litora aptent facilisis eu est.Segue a gente lá no insta <a href="https://instagram.com/casamentojuliaejoao" target="_blank">@casamentojuliaejoao</a>, para acompanhar o nosso dia especial e compartilhar com a gente as suas fotos!</p>
             </div>
           </div>
         </div>
