[ADD] Inclusão da descrição dos noivos
Signed-off-by: João Carvalho <joao.carvalho@tmh.com.br>

--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
               </div>
             </div>
             <div class="col-md-6 align-middle my-auto">
-              <p class="pt-3 text-left text-muted">Hi I am João,Lorem ipsum dolor sit amet consectetur adipiscing,
-                elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
-                mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
-                commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                dictum posuere, tincidunt aenean litora aptent facilisis eu est.Segue a gente lá no insta <a href="https://instagram.com/casamentojuliaejoao" target="_blank">@casamentojuliaejoao</a>, para acompanhar o nosso dia especial e compartilhar com a gente as suas fotos!</p>
+              <p class="pt-3 text-left text-muted">
+                Há muito tempo, numa galáxia muito, muito distante. Nossa história começou a ser escrita, dois jovens bruxos, ele da grifinória e ela da lufa-lufa, decidiram juntar suas vassouras de quadribol. Sempre juntos, dispostos a lutar um pelo outro não importando o desafio, VAMOS FINALMENTE NOS CASAR! <i class="fas fa-heart"></i></p>
+              <p class="pt-3 text-left text-muted">Caso você chegou aqui, isso significa que de alguma forma você faz
+                parte das nossas vidas e ficamos imensamente felizes em contar com você no nosso grande dia especial!</p>
+              <p class="pt-3 text-left text-muted">Segue a gente lá no insta <a
+                  href="https://instagram.com/casamentojuliaejoao" target="_blank">@casamentojuliaejoao</a>, para
+                acompanhar o nosso dia especial e compartilhar com a gente as suas fotos!</p>
             </div>
           </div>
         </div>
