--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="col-md-6 align-middle my-auto">
               <p class="pt-3 text-left text-muted">
-                Há muito tempo, numa galáxia muito, muito distante. Nossa história começou a ser escrita, dois jovens bruxos, ele da grifinória e ela da lufa-lufa, decidiram juntar suas vassouras de quadribol. Sempre juntos, dispostos a lutar um pelo outro não importando o desafio, VAMOS FINALMENTE NOS CASAR! <i class="fas fa-heart"></i></p>
+                Há muito tempo, numa galáxia muito, muito distante. Nossa história começou a ser escrita, dois jovens bruxos, ele da grifinória e ela da lufa-lufa, decidiram juntar suas vassouras de quadribol. Sempre juntos, dispostos a lutar um pelo outro não importando o desafio, VAMOS FINALMENTE NOS CASAR! <i class="fas fa-heart" style="color:#f58a77;"></i></p>
               <p class="pt-3 text-left text-muted">Caso você chegou aqui, isso significa que de alguma forma você faz
                 parte das nossas vidas e ficamos imensamente felizes em contar com você no nosso grande dia especial!</p>
               <p class="pt-3 text-left text-muted">Segue a gente lá no insta <a
@@ -106,16 +106,16 @@
               <div class="my-3">
                 <div class="h4">Cerimônia</div>
                 <ul>
-                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class="underline"
+                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class=""
                       href="https://www.google.com/maps/place/Santu%C3%A1rio+Bas%C3%ADlica+Senhor+Bom+Jesus+de+Trememb%C3%A9/@-22.959391,-45.552218,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf71347bee355:0x34f557130f1d5a24!8m2!3d-22.959396!4d-45.550024"><i
-                        class="text-muted fas fa-map-marker-alt"></i><span class="pl-2 text-muted">Igreja Bom Jesus,
+                        class="text-muted fas fa-map-marker-alt"></i><span class="pl-2">Igreja Bom Jesus,
                         Praça Padre Luiz Balmes, Centro, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class=""
                       title="Clique aqui para adiconar a data ao seu calendário"><i
-                        class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
+                        class="text-muted far fa-calendar-alt"></i><span class="pl-2">22 Out 2022,
                         19:00</span></a></li>
                 </ul>
-                <p>Aqui será o local onde oficializaremos nosso matrimônio em Cristo e onde falaramos o Sim um para o
+                <p>Aqui será o local onde oficializaremos nosso matrimônio em Cristo e onde falaremos o Sim um para o
                   outro. A igreja do Bom Jesus de Tremembé foi construída pelo fundador da cidade, capitão-mor Manoel da
                   Costa Cabral, em 1672, após concessão de licença para construção da igreja pela Câmara Eclesiástica do
                   Rio de Janeiro em terras de sua fazenda, chamada Tremembé. A igreja, que à época era uma capela,
@@ -133,13 +133,13 @@
               <div class="my-3">
                 <div class="h4">Recepção</div>
                 <ul>
-                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class="underline"
+                  <li><a target="_blank" title="Clique aqui para ir ao Google Maps" class=""
                       href="https://www.google.com/maps/place/Espa%C3%A7o+Crozariol+Buffet+e+eventos/@-22.9432242,-45.5824071,17z/data=!3m1!4b1!4m5!3m4!1s0x94ccf64dd3c89af9:0x6c8284abecc1c8a8!8m2!3d-22.9432292!4d-45.5802131"><i
-                        class="text-muted fas fa-map-marker-alt "></i><span class="pl-2 text-muted">Crozariol, Rod.
+                        class="text-muted fas fa-map-marker-alt "></i><span class="pl-2">Crozariol, Rod.
                         Pedro Celete, 3221, Tremembé - SP</span></a></li>
-                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class="underline"
+                  <li class="pt-2"><a href="convite/Casamento Julia & João.ics" class=""
                       title="Clique aqui para adiconar a data ao seu calendário"><i
-                        class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">22 Out 2022,
+                        class="text-muted far fa-calendar-alt"></i><span class="pl-2">22 Out 2022,
                         20:30</span></a></li>
                 </ul>
                 <p>Uma empresa familiar séria e íntegra que desde 1999 vêm realizando eventos & sonhos. Oferecendo toda
