[ADD] Descrição do vídeo
Signed-off-by: João V. C. Carvalho <joao.vccarvalho@unitau.br>

--- a/index.html
+++ b/index.html
@@ -291,11 +291,7 @@
             Casamento</h2>
           <div class="row text-center">
             <div class="col-md-12">
-              <p class="pt-3 text-left text-muted">Hi I am Julia,Lorem ipsum dolor sit amet consectetur adipiscing,
-                elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi
-                mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla
-                commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis
-                dictum posuere, tincidunt aenean litora aptent facilisis eu est.</p>
+              <p class="pt-3 text-center text-muted">Você já viu como foi nosso pedido de casamento??? Gravamos para deixar registrado esse momento único em nossas vidas! Assiste aqui com a gente</p>
               <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
             </div>
 
