--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Eventos</a></li>
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Pessoas</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li> -->
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li>
+                <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#pedido">O Pedido de Casamento</a></li>
               </ul>
             </div>
@@ -258,7 +258,7 @@
     </div>
   </div>
 </div> -->
-      <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
+      <!-- <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
         <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
           <div class="col text-center">
             <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Confirme sua presença</h2>
@@ -279,12 +279,12 @@
           </div>
           <div class="row">
             <div class="col text-center">
-              <button class="btn btn-primary btn-submit btn-disabled" disabled title="Desabilitado temporariamente"
+              <button class="btn btn-primary btn-submit"
                 type="button" id="enviar"><i class="fab fa-whatsapp"></i> Enviar</button>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="ww-section" id="pedido">
         <div class="container">
           <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">O Pedido de
