[ADD] Inclusão do google analytics
Signed-off-by: João V. C. Carvalho <joao.vccarvalho@unitau.br>

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
       }
     </style>
   </noscript>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-925M4SX2L9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-925M4SX2L9');
+  </script>
 </head>
 
 <body id="top">
@@ -88,9 +97,13 @@
             </div>
             <div class="col-md-6 align-middle my-auto">
               <p class="pt-3 text-left text-muted">
-                Há muito tempo, numa galáxia muito, muito distante. Nossa história começou a ser escrita, dois jovens bruxos, ele da grifinória e ela da lufa-lufa, decidiram juntar suas vassouras de quadribol. Sempre juntos, dispostos a lutar um pelo outro não importando o desafio, VAMOS FINALMENTE NOS CASAR! <i class="fas fa-heart" style="color:#f58a77;"></i></p>
+                Há muito tempo, numa galáxia muito, muito distante. Nossa história começou a ser escrita, dois jovens
+                bruxos, ele da grifinória e ela da lufa-lufa, decidiram juntar suas vassouras de quadribol. Sempre
+                juntos, dispostos a lutar um pelo outro não importando o desafio, VAMOS FINALMENTE NOS CASAR! <i
+                  class="fas fa-heart" style="color:#f58a77;"></i></p>
               <p class="pt-3 text-left text-muted">Caso você chegou aqui, isso significa que de alguma forma você faz
-                parte das nossas vidas e ficamos imensamente felizes em contar com você no nosso grande dia especial!</p>
+                parte das nossas vidas e ficamos imensamente felizes em contar com você no nosso grande dia especial!
+              </p>
               <p class="pt-3 text-left text-muted">Segue a gente lá no insta <a
                   href="https://instagram.com/casamentojuliaejoao" target="_blank">@casamentojuliaejoao</a>, para
                 acompanhar o nosso dia especial e compartilhar com a gente as suas fotos!</p>
@@ -291,7 +304,8 @@
             Casamento</h2>
           <div class="row text-center">
             <div class="col-md-12">
-              <p class="pt-3 text-center text-muted">Você já viu como foi nosso pedido de casamento??? Gravamos para deixar registrado esse momento único em nossas vidas! Assiste aqui com a gente</p>
+              <p class="pt-3 text-center text-muted">Você já viu como foi nosso pedido de casamento??? Gravamos para
+                deixar registrado esse momento único em nossas vidas! Assiste aqui com a gente</p>
               <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
             </div>
 
