[ADD] Inclusão do meta dados
Signed-off-by: João V. C. Carvalho <joao.vccarvalho@unitau.br>

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="content-language" content="pt-br">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Casamento Julia Rocha e João Carvalho dia 22 de Outubro de 2022 (22/10/2022) que ocorrerá em Tremembé."/>
+  <meta name="author" content="João Carvalho">
+  <meta name="creator" content="João Carvalho">
   <title>Julia e João | 22.10.2022</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin" />
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500&amp;display=swap" />
