--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Eventos</a></li>
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Pessoas</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li> -->
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#pedido">O Pedido de Casamento</a></li>
               </ul>
             </div>
@@ -276,16 +276,17 @@
     </div>
   </div>
 </div> -->
-      <!-- <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
+      <div class="ww-section ww-rsvp-detail text-white" id="rsvp">
         <div class="container" data-aos="zoom-in-up" data-aos-duration="1000">
           <div class="col text-center">
-            <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Confirme sua presença</h2>
+            <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Confirmação de presença em breve!</h2>
+            <!-- <h2 class="h1 ww-title pb-3" data-aos="zoom-in-down" data-aos-duration="1000">Confirme sua presença</h2> -->
           </div>
-          <div class="row ww-rsvp-form">
+          <!-- <div class="row ww-rsvp-form">
             <div class="col-md-10">
               <div class="card-body">
                 <div class="row">
-                  <div class="col md-6 pb-6">
+                  <div class="col md-6 pb-6 text-center">
                     <div class="form-group">
                       <label for="nome">Seu nome*</label>
                       <input class="form-control" id="nome" type="text" name="nome" required="required" />
@@ -294,15 +295,15 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+          <!-- <div class="row">
             <div class="col text-center">
               <button class="btn btn-primary btn-submit"
                 type="button" id="enviar"><i class="fab fa-whatsapp"></i> Enviar</button>
             </div>
-          </div>
+          </div> -->
         </div>
-      </div> -->
+      </div>
       <div class="ww-section" id="pedido">
         <div class="container">
           <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">O Pedido de
