[ADD] Inclusão do PayPal para doação [MOD] Alterando tamanho da font do site para 1.1em
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Galeria</a></li> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">Confirme sua presença</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#pedido">O Pedido de Casamento</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#pix">Apoio</a></li>
               </ul>
             </div>
           </div>
@@ -319,6 +320,53 @@
               <iframe src="https://www.youtube.com/embed/MLWAmZSACxc" class="pedido-full" title="YouTube video player"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ww-section bg-light" id="pix">
+        <div class="container">
+          <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Apoio de Coração</h2>
+          <div class="row text-center">
+            <div class="col-md-12">
+              <p class="pt-3 text-center text-muted">Todos vocês são especiais para nós e de forma alguma entenda esse apoio como uma obrigação! Caso você queira e possa contribuir com alguma quantia de bufunfa, disponibilizamos algumas formas e ficaremos eternamente gratos! Observação: se quiser chamar a gente pra uma conversa/proza/café/churrasco também ficaremos felizes hahaha!</p>
+              <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
+            </div>
+          </div>
+          
+          <div class="row text-center">
+            <div class="col-md-12">
+              <p class="h2 pt-3 text-muted ww-title">
+                Escolha
+              </p>
+            </div>
+          </div>
+          <div class="row mb-5">
+            <!-- <div class="col-md-6 text-right btn-ctm-center">
+                <a class="btn btn-primary btn-ctm" target="_blank" href="https://www.paypal.com/donate/?hosted_button_id=3URN5RVV244ML">PIX</a>
+            </div> -->
+            <!-- <div class="col-md-6 btn-ctm-center btn-ctm-top"> -->
+            <div class="col-md-12 text-center">
+                <a class="btn btn-primary btn-ctm" target="_blank" href="https://www.paypal.com/donate/?hosted_button_id=3URN5RVV244ML">PayPal</a>
+            </div>
+          </div>
+
+          <div class="row text-center">
+            <div class="col-md-4">
+              <p class="h4 pt-3">Escolha entre PIX ou PayPal</p>
+              <p class="pt-3 text-muted">Você pode nos presentear com qualquer quantia que desejar e da maneira que quiser. Para facilitar o envio e garantir o recebimento, disponibilizamos duas formas de transferência: PIX e PayPal.</p>
+              <p class="pt-3 text-muted">Para fazer uma transferência via PIX, é só clicar no botão PIX abaixo, ler o QR Code ou utilizar a chave informada.</p>
+              <p class="pt-3 text-muted">Se você deseja nos presentear através do seu cartão de crédito, inclusive de forma parcelada, é só apertar o botão "PayPal" e seguir as próximas instruções.</p>
+            </div>
+            <div class="col-md-4">
+              <p class="h4 pt-3">Se você optar pelo PayPal...</p>
+              <p class="pt-3 text-muted">Após apertar o botão, uma nova janela vai ser aberta. Primeiro é necessário digitar a quantia com a qual que deseja nos presentar. Se você já conhece e deseja utilizar sua conta do PayPal para finalizar a transferência, é só clicar no botão "Doar com PayPal".</p>
+              <p class="pt-3 text-muted">Se você desejar utilizar um cartão de débito ou crédito, pode apertar o botão "Doe usando um cartão", preencher as informações do seu cartão e pronto, receberemos imediatamente seu presente!</p>
+            </div>
+            <div class="col-md-4">
+              <p class="h4 pt-3">Espere a nossa confirmação</p>
+              <p class="pt-3 text-muted">Depois da transferência, independente se você escolheu PIX ou PayPal, receberemos o presente imediatamente.</p>
+              <p class="pt-3 text-muted">Para que você fique tranquilo, enviaremos uma mensagem através do seu WhatsApp para confirmar a transferência. <span style="color:#f58a77;">❤</span></p>
             </div>
           </div>
         </div>
