[MOD] Descrição meta do site
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
-  <meta name="description" content="Casamento Julia Rocha e João Carvalho dia 22 de Outubro de 2022 (22/10/2022) que ocorrerá em Tremembé."/>
+  <meta name="description" content="Site oficial do nosso casamento - Julia e João. Casamento Julia Rocha e João Carvalho dia 22 de Outubro de 2022 (22/10/2022) que ocorrerá em Tremembé."/>
   <meta name="author" content="João Carvalho">
   <meta name="creator" content="João Carvalho">
   <title>Julia e João | 22.10.2022</title>
