[ADD] Implementando footer no home e página do convidados de honra
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -372,14 +372,6 @@
           </div>
         </div>
       </div>
-      <div class="ww-footer bg-light">
-        <div class="container text-center py-4">
-          <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
-          <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>
-          </p>
-          <p class="mb-0">Implemented by noivo 😀</p>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -411,7 +403,55 @@
     </div>
   </div>
 
-  <footer></footer>
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+  
+      <!-- Section: Links -->
+      <section class="m-5">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Outras páginas</h5>
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="./convidados-honra.html" class="text-white">Convidados de Honra</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+  
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Redes sociais</h5>
+  
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="https://instagram.com/casamentojuliaejoao" target="_blank" class="text-white">Casamento</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+    </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center py-4" style="background-color: rgba(0, 0, 0, 0.2);">
+      
+        <p class="my-0">&copy; Wonderful Wedding. All rights reserved.</p>
+        <p class="mb-0">Design - <a class="credit" href="https://templateflip.com" target="_blank">TemplateFlip</a>
+        </p>
+        <p class="mb-0">Implemented by noivo 😀</p>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+
   <script src="scripts/jquery.min.js?ver=1.1.0"></script>
   <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
   <script src="scripts/aos.js?ver=1.1.0"></script>
