[FIX] Ajustando alinhamento da cor dos vestidos
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/convidados-honra.html
+++ b/convidados-honra.html
@@ -88,7 +88,7 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            margin: 50px;
+            margin: 10px auto;
         }
 
         .tom-noiva-1 {
@@ -102,6 +102,8 @@
         }
         .tom-noivo-2 {
             background-color: #E1A3AC;
+        }
+        .auto {
         }
     </style>
 </head>
