[MOD] Alterando cores do vestido das madrinhas.
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/convidados-honra.html
+++ b/convidados-honra.html
@@ -92,10 +92,10 @@
         }
 
         .tom-noiva-1 {
-            background-color: #d36977;
+            background-color: rgb(251, 36, 52);
         }
         .tom-noiva-2 {
-            background-color: #912f3c;
+            background-color: rgb(236, 0, 67);
         }
         .tom-noivo-1 {
             background-color: #F5B4BC;
@@ -138,14 +138,14 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-12">
-                            <p class="pt-3 text-center text-muted">Vestido longo no modelo de sua preferência, porém seguindo os tons definidos abaixo. No caso de eventuais dúvidas, fiquei a vontade para consultar a Noiva!</p>
+                            <p class="pt-3 text-center text-muted">Vestido longo no modelo de sua preferência, porém seguindo os tons definidos abaixo. Caso queira chamar a Julia para acompanhar na escolha do festido, fique a vontade!</p>
                         </div>
                     </div>
                     <div class="row text-center">
                         <div class="col-md-6">
                             <div class="h4">Lado da Noiva</div>
-                            <p class="pt-3 text-center text-muted">Tons vermelho frio</p>
-
+                            <p class="pt-3 text-center text-muted">Tons vermelho frio (Vermelho e red shine)</p>
+                            
                             <div class="row text-center">
                                 <div class="col-md-2"></div>
                                 <div class="col-md-4">
@@ -156,6 +156,7 @@
                                 </div>
                                 <div class="col-md-2"></div>
                             </div>
+                            <p class="text-muted">Obs: não utilizar marsala</p>
 
                         </div>
                         <div class="col-md-6">
