[FIX] Correções de português
Signed-off-by: João Carvalho <contato.jccarvalho@hotmail.com>

--- a/convidados-honra.html
+++ b/convidados-honra.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-12">
-                            <p class="pt-3 text-center text-muted">Vestido longo no modelo de sua preferência, porém seguindo os tons definidos abaixo. Caso queira chamar a Julia para acompanhar na escolha do festido, fique a vontade!</p>
+                            <p class="pt-3 text-center text-muted">Vestido longo no modelo de sua preferência, porém seguindo os tons definidos abaixo. Caso queira chamar a Julia para acompanhar na escolha do vestido, fique a vontade!</p>
                         </div>
                     </div>
                     <div class="row text-center">
