--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Apoio de Coração</h2>
           <div class="row text-center">
             <div class="col-md-12">
-              <p class="pt-3 text-center text-muted">Todos vocês são especiais para nós e de forma alguma entenda esse apoio como uma obrigação! Caso você queira e possa contribuir com alguma quantia de bufunfa, disponibilizamos algumas formas e ficaremos eternamente gratos! E obiviamente se quiser nos chamar para uma conversa, café, proza, churrasco, piquenique, almoço, jantar, lanchão, jogos de tabuleiro, pizza ou algma outra coisa também ficaremos felizes hahaha!</p>
+              <p class="pt-3 text-center text-muted">Todos vocês são especiais para nós e de forma alguma entenda esse apoio como uma obrigação! Caso você queira e possa contribuir com alguma quantia de bufunfa, disponibilizamos algumas formas e ficaremos eternamente gratos! E obiviamente se quiser nos chamar para uma conversa, café, proza, churrasco, piquenique, almoço, jantar, lanchão, jogos de tabuleiro, pizza ou alguma outra coisa também ficaremos felizes hahaha!</p>
               <!-- <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div> -->
             </div>
           </div>
