--- a/convidados-honra.html
+++ b/convidados-honra.html
@@ -175,7 +175,28 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <hr />
 
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <p class="h2 pt-3 text-muted ww-title">
+                                Terno
+                            </p>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-12">
+                            <p class="pt-3 text-muted">Para os jogadores caros (nossos padrinhos):</p>
+                            <ul class="text-muted">
+                                <li>Terno preto;</li>
+                                <li>Camisa branca;</li>
+                                <li>Gravata combinando com a cor da madrinha;</li>
+                                <li>Flor de lapela mosquitinhos (lado esquerdo, pouco abaixo do ombro);</li>
+                                <li>Cabelin na régua.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
